# geomu

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README  README.txt
data/: .gitignore  .vimrc  Bartol_pm14.tsv  Bartol_pm14_cos_theta.tsv  Bartol_pm14_energy.tsv  crust-elem.tsv  crust-elem.txt
genie/: .gitignore  cmake-env.sh  env.sh  genie_xsec
genie/atmo/: BGLRS-Kamioka  genie_xsec  run.sh
genie/nu_mu_O16/: run.sh
include/geomu/: BartolPM14Generator.h  CrustMaterialFactory.h  ECMA48_SGR.h  GenieAdapter.h  GridSampler2D.h  NtpMCTupler.h  diagnostic.h  random.h
plot/: plot_Bartol_pm14.py  plot_atmo.py
src/: geomu-run.cpp  ntuple-ntpmc.cpp
src/geomu/: BartolPM14Generator.cpp  CrustMaterialFactory.cpp  GenieAdapter.cpp  GridSampler2D.cpp  NtpMCTupler.cpp  diagnostic.cpp  random.cpp
test/: .gitignore  crust-test.cpp  generator-test.cpp  ntuple-test.cpp  sampler-test.cpp  validate-generator  validate-generator.py  validate-sampler-test  validate-sampler.py
